--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "build": "vite build"
   },
   "dependencies": {
-    "vue": "^3.0.4"
+    "axios": "^0.21.1",
+    "vue": "^3.0.4",
+    "vue-router": "4"
   },
   "devDependencies": {
-    "vite": "^1.0.0-rc.13",
-    "@vue/compiler-sfc": "^3.0.4"
+    "@vue/compiler-sfc": "^3.0.4",
+    "vite": "^1.0.0-rc.13"
   }
 }
