--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "cards-manager",
   "version": "0.0.0",
+  "license": "MIT",
   "scripts": {
     "dev": "vite",
     "build": "vite build"
